@@ -453,6 +453,14 @@
                         echo '</tr>';
                     }
                 }
+
+                $enableColumnWeighting = getSettingByScope($connection2, 'Markbook', 'enableColumnWeighting');
+                $enableDisplayCumulativeMarks = getSettingByScope($connection2, 'Markbook', 'enableDisplayCumulativeMarks');
+
+                if ($enableColumnWeighting == 'Y' && $enableDisplayCumulativeMarks == 'Y') {
+                    renderStudentCumulativeMarks($gibbon, $pdo, $_SESSION[$guid]['gibbonPersonID'], $rowList['gibbonCourseClassID']);
+                }
+
                 echo '</table>';
             }
         }
